@@ -34,6 +34,7 @@
 #include "types/schema/schema.h"
 #include "context/root_static_context.h"
 #include "context/default_url_resolvers.h"
+#include "context/dynamic_loader.h"
 #include "functions/library.h"
 #include "annotations/annotations.h"
 #include "compiler/api/compiler_api.h"
@@ -98,6 +99,8 @@ void GlobalEnvironment::init(store::Store* store)
   m_globalEnv->m_compilerSubSys = lSubSystem.release();
 
   m_globalEnv->m_http_resolver = new internal::HTTPURLResolver();
+
+  m_globalEnv->m_dynamic_loader = 0;
 }
 
 
@@ -105,6 +108,8 @@ void GlobalEnvironment::init(store::Store* store)
 // note: destruction must be done in reverse initialization order
 void GlobalEnvironment::destroy()
 {
+  delete m_globalEnv->m_dynamic_loader;
+
   delete m_globalEnv->m_http_resolver;
 
   serialization::ClassSerializer::getInstance()->destroyArchiverForHardcodedObjects();
@@ -271,6 +276,15 @@ store::IteratorFactory* GlobalEnvironment::getIteratorFactory()
 XQueryCompilerSubsystem& GlobalEnvironment::getCompilerSubsystem()
 {
   return *m_compilerSubSys;
+}
+
+DynamicLoader* GlobalEnvironment::getDynamicLoader() const
+{
+  if (!m_dynamic_loader)
+  {
+    m_dynamic_loader = new DynamicLoader();
+  }
+  return m_dynamic_loader;
 }
 
 #ifdef ZORBA_XQUERYX
